# Painter

./: .gitignore  CMakeLists.txt
include/: Painter2D.h
include/Painter/: Color.h  Fwd.h  Painter2D.h  Vec2.h
src/: Painter2D.cpp
tests/: CMakeLists.txt  Painter2DTest.cpp
